--- a/Default.cshtml
+++ b/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     var pageId = Context.GetRouteValue("pageId");
-    var pageId0 = Context.GetRouteValue("p0");
+    //var pageId0 = Context.GetRouteValue("p0");
     //if(pageId == null){Response.SetStatus(HttpStatusCode.NotFound);}
     
     if (pageId == null){pageId = "default";}
