--- a/Components/Control/Settings.cshtml
+++ b/Components/Control/Settings.cshtml
@@ -69,7 +69,7 @@
         </li>
         <li>
             <label for="sitemeta">@dmeta.SetDescr</label>
-            <input type="checkbox" @Html.Raw(dmetavalue) name="sitemeta"/>
+            <input disabled="disabled" type="checkbox" @Html.Raw(dmetavalue) name="sitemeta"/>
         </li>
         <li>
         <input type="submit" value="Сохранить"/>
