--- a/Components/Control/NewPage.cshtml
+++ b/Components/Control/NewPage.cshtml
@@ -1,3 +1,107 @@
 ﻿@{
+var errMSG = "";
+var redirect = false;
+var db = Database.Open("Datebase");
+
+
+    DirectoryInfo dirInfo = new DirectoryInfo(Server.MapPath("~/Components/Layouts"));
+    FileInfo[] fileInfo = dirInfo.GetFiles("_*.cshtml", SearchOption.TopDirectoryOnly  );
+
+    if(IsPost){
+        var pagename = Request["pagename"];
+        
+        var pageurl = Request["pageurl"];
+
+        var pagedescr = Request["pagedescr"];
+
+        var pageauthor = Request["pageauthor"];
+
+        var pagelayout = Request["pagelayout"];
+
+        var pagecontent = Request.Unvalidated("pagecontent");
+
+        var today = DateTime.Now;
+        
+        try
+             {
+                 db.Execute("INSERT into Pages (Name, Content, Date, Url, Layout, Description, Author) values (@0, @1, @2, @3, @4, @5, @6)", pagename, pagecontent, today, pageurl, pagelayout, pagedescr, pageauthor);
+                 //Response.Redirect("Editpage.cshtml?id=" + db.GetLastInsertId());
+                 redirect = true;
+             }
+             catch (Exception ex)
+             {
+
+                 errMSG = ex.Message.ToString();
+             }
+
+    }
+}
+@if(redirect == true){
     
 }
+
+@errMSG
+<form action="@Request.Url" method="post">
+    <ol>
+        <li>
+            <label for="pagename">Название страницы</label>
+            <input type="text" name="pagename" value=""/>
+        </li>
+        <li>
+            <label for="pageurl">Адрес страницы</label>
+            <input type="text" name="pageurl" value=""/>
+        </li>
+        <li>
+            <label for="c">Описание страницы</label>
+            <input type="text" name="pagedescr" value=""/>
+        </li>
+        <li>
+            <label for="pageauthor">Автор страницы</label>
+            <input type="text" name="pageauthor" value=""/>
+        </li>
+        <li>
+            <label for="pagelayout">Макет сраницы</label>
+            <select  name="pagelayout">
+                @foreach (var f in fileInfo)
+               {
+                <option value="@Functions.CleanRCNames(f.Name)" >@Functions.CleanRCNames(f.Name)</option>
+               }
+            </select>
+        </li>
+        <li>
+            <label for="pagecontent">Содежимое страницы</label>
+            <textarea name="pagecontent" style="width:100%;"></textarea>
+        </li>
+        <li>
+            <input type="submit" value="Сохранить"/>
+        </li>
+    </ol>
+</form>
+
+
+<script type="text/javascript" src="~/components/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
+<script type="text/javascript">
+tinyMCE.init({
+    mode : "textareas",
+    theme : "advanced",
+    theme_advanced_buttons1 : "mybutton,bold,italic,underline,separator,strikethrough,justifyleft,justifycenter,justifyright, justifyfull,bullist,numlist,undo,redo,link,unlink,code,image,fontsizeselect",
+    theme_advanced_buttons2 : "",
+    theme_advanced_buttons3 : "",
+    theme_advanced_toolbar_location : "top",
+    theme_advanced_toolbar_align : "left",
+    theme_advanced_statusbar_location : "bottom",
+    plugins : 'inlinepopups',
+    setup : function(ed) {
+        // Add a custom button
+        ed.addButton('mybutton', {
+            title : 'My button',
+            image : 'img/example.gif',
+            onclick : function() {
+                // Add you own code to execute something on click
+                ed.focus();
+                ed.selection.setContent('Hello world!');
+            }
+        });
+    }
+});
+</script>
