--- a/Components/Control/_Layout.cshtml
+++ b/Components/Control/_Layout.cshtml
@@ -11,5 +11,6 @@
     </head>
     <body>
         @RenderBody()
+        <script src="//code.jquery.com/jquery-1.9.0.min.js"></script>
     </body>
 </html>
