Update control panel

--- a/Components/Control/Editor.cshtml
+++ b/Components/Control/Editor.cshtml
@@ -86,6 +86,6 @@
         @AntiForgery.GetHtml()
     <textarea name="fileContent" rows="30" cols="90">@fileContent</textarea>
               <p class="form-actions">
-            <input type="submit" value="Update" title="Update" />
+            <input type="submit" class="btn" value="Update" title="Update" />
         </p>
      </form>
