--- a/Components/Control/Default.cshtml
+++ b/Components/Control/Default.cshtml
@@ -14,6 +14,18 @@
     {}
     
 }
+<div class="home-start">
+    <div class="home-start-step1">
+        
+    </div>
+    <div class="home-start-step2">
+        
+    </div>
+    <div class="home-start-step3">
+        
+    </div>
+</div>
+
 <div>
 
    <ol reversed>
