--- a/Components/Control/PageEdit.cshtml
+++ b/Components/Control/PageEdit.cshtml
@@ -80,7 +80,7 @@ Page.Title = "Редактирование страницы";
     @AntiForgery.GetHtml()
     <ol>
         <li>
-            <label for="pagetitle">Название страницы*</label>
+            <label for="pagetitle">Название страницы*:</label>
             <input class="form-input" type="text" name="pagetitle" value="@data.Name"/>
             @if(pagetitlevalid){
                 <text>
@@ -91,10 +91,10 @@ Page.Title = "Редактирование страницы";
             }
         </li>
         <li>
-            <label for="pageurl">Адрес страницы*</label>
+            <label for="pageurl">Адрес страницы*:</label>
             
             <span class="form-input-link"><span class="t-link">
-            @Request.Url.Scheme://@Request.Url.Authority/</span><input type="text" name="pageurl" value="@data.Url"/></span>
+            @Request.Url.Scheme://@Request.Url.Authority/</span><input type="text" class="url" name="pageurl" value="@data.Url"/></span>
             @if(pageurlvalid){
                 <text>
                     <span class="form-error">
@@ -105,11 +105,11 @@ Page.Title = "Редактирование страницы";
         </li>
         
          <li>
-            <label for="pageauthtor">Автор страницы</label>
+            <label for="pageauthtor">Автор страницы:</label>
             <input class="form-input" type="text" name="pageauthtor" value="@data.Author"/>
         </li>
          <li>
-            <label for="pagelayout">Макет страницы</label>
+            <label for="pagelayout">Макет страницы:</label>
             <select class="form-input"  name="pagelayout">
                 @foreach (var f in fileInfo)
                {
@@ -126,7 +126,7 @@ Page.Title = "Редактирование страницы";
             }
         </li>
         <li>
-            <label for="pagedescr">Описание страницы</label>
+            <label for="pagedescr">Описание страницы:</label>
             <input class="form-input" type="text" name="pagedescr" value="@data.Description"/>
         </li>
         <li>
@@ -142,7 +142,7 @@ Page.Title = "Редактирование страницы";
             <textarea class="form-input" name="pagecontent" style="width:100%;">@data.Content</textarea>
         </li>
         <li>
-            <input type="submit" value="Сохранить"/>
+            <input type="submit" class="btn" value="Сохранить"/>
         </li>
     </ol>
 
