--- a/Components/Control/SiteMenu.cshtml
+++ b/Components/Control/SiteMenu.cshtml
@@ -5,9 +5,9 @@ var errorm = "";
 var IsValid = true;
 var linklabelvalid = false;
 var pagelinkvalid = false;
-
-
-    
+var linklabel = Request["linklabel"];
+var pagelink = Request["pagelink"];
+var linkorder = Request["linkorder"];    
 
 
     var db = Database.Open("Datebase");
@@ -22,45 +22,48 @@ var pagelinkvalid = false;
         Response.Redirect("SiteMenu");
     }
 
+
     var data = db.Query("select * from SiteMenu order by OrderId DESC");
     var grid = new WebGrid(data);
     
     var pages = db.Query("Select Name from Pages order by Name");
 
+
+
     if(IsPost){
         AntiForgery.Validate();
-    var linklabel = Request["linklabel"];
-    if(linklabel.IsEmpty()){
-        linklabelvalid = true;
-        IsValid = false;
-    }
+        linklabel = Request["linklabel"];
+        if(linklabel.IsEmpty()){
+            linklabelvalid = true;
+            IsValid = false;
+        }
 
-    var pagelink = Request["pagelink"];
-    if(linklabel.IsEmpty()){
-        pagelinkvalid = true;
-        IsValid = false;
-    }
+        pagelink = Request["pagelink"];
+        if(pagelink.IsEmpty()){
+            pagelinkvalid = true;
+            IsValid = false;
+        }
     
 
-    var target = Request["Target"];
+         var target = Request["Target"];
 
-    var linkorder = Request["linkorder"];
-    if(linkorder.IsEmpty()){
-        linkorder = "1";
-    }
-
-    if(IsValid){
-        try
-        {
-            db.Execute("INSERT INTO SiteMenu (Label, Link, Target, OrderId) VALUES (@0, @1, @2, @3)", linklabel, pagelink, target, linkorder);
-            Response.Redirect("~/Components/Control/SiteMenu");
+        linkorder = Request["linkorder"];
+        if(linkorder.IsEmpty()){
+            linkorder = "1";
         }
-        catch (Exception ex)
-        {
+
+            if(IsValid){
+                try
+                    {
+                    db.Execute("INSERT INTO SiteMenu (Label, Link, Target, OrderId) VALUES (@0, @1, @2, @3)", linklabel, pagelink, target, linkorder);
+                    Response.Redirect("~/Components/Control/SiteMenu");
+                    }
+                catch (Exception ex)
+                {
             
-            errorm = ex.Message.ToString();
-        }
-    }
+                    errorm = ex.Message.ToString();
+                }
+           }
 
 
    }
@@ -73,8 +76,8 @@ var pagelinkvalid = false;
     @AntiForgery.GetHtml()
     <ol>
         <li>
-            <label for="linklabel">Название пункта меню*</label>
-            <input type="text" name="linklabel" value=""/>
+            <label for="linklabel">Название пункта меню*:</label>
+            <input type="text" name="linklabel" value="@linklabel"/>
             @if(linklabelvalid){
                 <text>
                     <span class="form-error">
@@ -94,8 +97,8 @@ var pagelinkvalid = false;
                  </select>
              </li>*@
              <li >
-                <label for="pagelink">Адрес ссылки*</label>
-                <input type="text" name="pagelink" value="" maxlength="250" />
+                <label for="pagelink">Адрес ссылки*:</label>
+                <input type="text" name="pagelink" value="@pagelink" maxlength="250" />
                  
                  @if(pagelinkvalid){
                 <text>
@@ -113,12 +116,12 @@ var pagelinkvalid = false;
                   </select>
              </li>
         <li>
-            <label for="linkorder">Номер пункта меню</label>
-            <input type="number" name="linkorder" value=""/>
+            <label for="linkorder">Номер пункта меню:</label>
+            <input type="number" name="linkorder" value="@linkorder"/>
            
         </li>
         <li>
-            <input type="submit" value="Добавить"/>
+            <input type="submit" class="btn" value="Добавить"/>
         </li>
     </ol>
 </form>
