--- a/Components/Layouts/_lMaster.cshtml
+++ b/Components/Layouts/_lMaster.cshtml
@@ -13,6 +13,10 @@
     var dmeta = db.QuerySingle(dbstring, "4"); //geting meta enable
 
     var ddkeyw = db.QuerySingle(dbstring, "6"); //geting Site Keywords
+
+    var dstat = db.QuerySingle(dbstring, "7"); //geting Site Statistic
+
+    var dstatcode = db.QuerySingle(dbstring, "8"); //geting Site Statistic Code
 }
 
 <!DOCTYPE html>
@@ -34,5 +38,12 @@
     </head>
     <body>
         @RenderBody()
+
+
+
+       @Html.Raw(dstatcode.SetValue)
+        @if(dstat.SetValue == "on"){
+        <script>(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter206275 = new Ya.Metrika({id:206275, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true, trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/206275" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+}
     </body>
 </html>
