--- a/Components/Control/PageEdit.cshtml
+++ b/Components/Control/PageEdit.cshtml
@@ -60,6 +60,11 @@ Page.Title = "Редактирование страницы";
             IsValid = false;
         }
 
+        /*var submitted = Request["submitted"];
+        if(submitted.IsEmpty()){
+            submitted = DateTime.Now.Date;
+        }*/
+
         if(IsValid){
             
         
@@ -78,10 +83,14 @@ Page.Title = "Редактирование страницы";
 @errorm
 <form action="@Request.Url" method="post">
     @AntiForgery.GetHtml()
-    <ol>
-        <li>
-            <label for="pagetitle">Название страницы*:</label>
-            <input class="form-input" type="text" name="pagetitle" value="@data.Name"/>
+    <table>
+        <tbody>
+            <tr>
+                <td class="table-label">
+                    <label for="pagetitle">Название страницы*:</label>
+                </td>
+                <td>
+                    <input required class="input" id="pagetitle" type="text" name="pagetitle" value="@data.Name"/>
             @if(pagetitlevalid){
                 <text>
                     <span class="form-error">
@@ -89,12 +98,15 @@ Page.Title = "Редактирование страницы";
                     </span>
                 </text>
             }
-        </li>
-        <li>
-            <label for="pageurl">Адрес страницы*:</label>
-            
-            <span class="form-input-link"><span class="t-link">
-            @Request.Url.Scheme://@Request.Url.Authority/</span><input type="text" class="url" name="pageurl" value="@data.Url"/></span>
+                </td>
+            </tr>
+            <tr>
+                <td class="table-label">
+                    <label for="pageurl">Адрес страницы*:</label>
+                </td>
+                <td>
+                    <span class="form-input-link"><span class="t-link">
+            @Request.Url.Scheme://@Request.Url.Authority/</span><input required type="text" id="pageurl" class="input url" name="pageurl" value="@data.Url"/></span>
             @if(pageurlvalid){
                 <text>
                     <span class="form-error">
@@ -102,15 +114,22 @@ Page.Title = "Редактирование страницы";
                     </span>
                 </text>
             }
-        </li>
-        
-         <li>
-            <label for="pageauthtor">Автор страницы:</label>
-            <input class="form-input" type="text" name="pageauthtor" value="@data.Author"/>
-        </li>
-         <li>
-            <label for="pagelayout">Макет страницы:</label>
-            <select class="form-input"  name="pagelayout">
+                </td>
+            </tr>
+        <tr>
+                <td class="table-label">
+                    <label for="pageauthtor">Автор страницы:</label>
+                </td>
+                <td>
+                    <input class="input" id="pageauthtor" type="text" name="pageauthtor" value="@data.Author"/>
+                </td>
+            </tr>
+        <tr>
+                <td class="table-label">
+                    <label for="pagelayout">Макет страницы:</label>
+                </td>
+                <td>
+                    <select required id="pagelayout" name="pagelayout">
                 @foreach (var f in fileInfo)
                {
                 <option value="@Functions.CleanRCNames(f.Name)" @if (MasterPage == f.Name)
@@ -124,13 +143,28 @@ Page.Title = "Редактирование страницы";
                     </span>
                 </text>
             }
-        </li>
-        <li>
-            <label for="pagedescr">Описание страницы:</label>
-            <input class="form-input" type="text" name="pagedescr" value="@data.Description"/>
-        </li>
-        <li>
-            <label for="pagecontent">Содежимое страницы*</label>
+                </td>
+            </tr>
+        <tr>
+                <td class="table-label">
+                    <label for="pagedescr">Описание страницы:</label>
+                </td>
+                <td>
+                    <input class="input" id="pagedescr" type="text" name="pagedescr" value="@data.Description"/>
+                </td>
+            </tr>
+        @*<tr>
+                <td class="table-label">
+                    <label for="submitted">Описание страницы:</label>
+                </td>
+                <td>
+                    <input class="input" id="submitted" type="date" name="submitted" value="@data.Submitted"/>
+                </td>
+            </tr>*@
+        </tbody>
+    </table>
+
+    <label class="table-label" for="pagecontent">Содежимое страницы*</label>
             @if(pagecontentvalid){
                 <text>
                     <span class="form-error">
@@ -139,15 +173,11 @@ Page.Title = "Редактирование страницы";
                     </span>
                 </text>
             }
-            <textarea class="form-input" name="pagecontent" style="width:100%;">@data.Content</textarea>
-        </li>
-        <li>
-            <input type="submit" class="btn" value="Сохранить"/>
-        </li>
-    </ol>
+            <textarea id="pagecontent" name="pagecontent" style="width:80%;height: 400px;min-width: 400px;">@data.Content</textarea>
 
+    <input type="submit" class="btn" value="Сохранить"/>
 
-      
+ 
 
     
 </form>
@@ -183,3 +213,4 @@ tinyMCE.init({
     }
 });
 </script>
+
