--- a/Components/Control/SiteMenuEdit.cshtml
+++ b/Components/Control/SiteMenuEdit.cshtml
@@ -1,38 +1,24 @@
 ﻿@{
-    
-Page.Title = "Меню сайта";    
-var errorm = "";
-var IsValid = true;
-var linklabelvalid = false;
-var pagelinkvalid = false;
-var linklabel = Request["linklabel"];
-var pagelink = Request["pagelink"];
-var linkorder = Request["linkorder"]; 
-var hashcode = Request.GetHashCode();   
-
-
-    var db = Database.Open("Datebase");
-
-    var deletepage = Request["deletemenuitem"];
-    if(deletepage == "true"){
-        
-        var deleteitemid = Request["itemid"];
-        
-        
-            db.Execute("delete from SiteMenu where Id=@0", deleteitemid);
-            
-        
-        Response.Redirect("SiteMenu");
+    Page.Title = "Меню сайта";
+    var IsValid = true;
+    var errorm = "";
+    var itemid = Request["id"];
+    if(itemid == null || itemid.IsEmpty()){
+        Response.SetStatus(HttpStatusCode.BadRequest);
     }
 
-   
+    var linklabelvalid = true;
+    var pagelinkvalid = true;
+    var linklabel = Request["linklabel"];
+    var pagelink = Request["pagelink"];
+    var linkorder = Request["linkorder"]; 
+    var hashcode = Request.GetHashCode();
 
-    var data = db.Query("select * from SiteMenu order by OrderId DESC");
-    var grid = new WebGrid(data);
+    var db = Database.Open("Datebase");
+    var data = db.QuerySingle("select * from SiteMenu where Id = @0", itemid);
+    var dataforgrid = db.Query("select * from SiteMenu order by OrderId DESC");
+    var grid = new WebGrid(dataforgrid);
     
-    //var pages = db.Query("Select Name from Pages order by Name");
-
-
 
     if(IsPost){
         AntiForgery.Validate();
@@ -59,23 +45,21 @@ var hashcode = Request.GetHashCode();
             if(IsValid){
                 try
                     {
-                    db.Execute("INSERT INTO SiteMenu (Label, Link, Target, OrderId) VALUES (@0, @1, @2, @3)", linklabel, pagelink, target, linkorder);
+                    //db.Execute("INSERT INTO SiteMenu (Label, Link, Target, OrderId) VALUES (@0, @1, @2, @3)", linklabel, pagelink, target, linkorder);
+                    db.Execute("UPDATE SiteMenu SET Label = @0, Link = @1, Target = @2, OrderId = @3 WHERE Id = @4", linklabel, pagelink, target, linkorder, itemid);
                     Response.Redirect("~/Components/Control/SiteMenu");
                     }
                 catch (Exception ex)
-                {
-            
+                {            
                     errorm = ex.Message.ToString();
                 }
            }
-
-
-   }
-
-    
+    }
 }
+
 @errorm
-<h2 id="add">Добавление пункта меню</h2>
+<a href="SiteMenu#add"><h2 class="add-onedit" id="add">Добавление пункта меню</h2></a>
+<h2 id="edit">Редактирование пунктов меню</h2>
 <form action="@Request.Url" name="add" method="post">
     @AntiForgery.GetHtml()
     <table>
@@ -85,8 +69,8 @@ var hashcode = Request.GetHashCode();
                     <label for="linklabel">Название пункта меню*:</label>
                 </td>
                 <td>
-                    <input type="text" class="input" id="linklabel" name="linklabel" value="@linklabel"/>
-            @if(linklabelvalid){
+                    <input type="text" class="input" id="linklabel" name="linklabel" value="@data.Label"/>
+            @if(!linklabelvalid){
                 <text>
                     <span class="form-error">
                         Текст ссылки не может быть пустым
@@ -100,9 +84,9 @@ var hashcode = Request.GetHashCode();
                     <label for="pagelink">Адрес ссылки*:</label>
                 </td>
                 <td>
-                    <input type="text" class="input" id="pagelink" name="pagelink" value="@pagelink" maxlength="250" />
+                    <input type="text" class="input" id="pagelink" name="pagelink" value="@data.Link" maxlength="250" />
                  
-                 @if(pagelinkvalid){
+                @if(!pagelinkvalid){
                 <text>
                     <span class="form-error">
                         Ссылка должна куда-то вести
@@ -117,8 +101,8 @@ var hashcode = Request.GetHashCode();
                 </td>
                 <td>
                     <select id="Target" name="Target">
-                      <option value="_self">Тоже окно</option>
-                      <option value="_blank">Новое окно</option>
+                      <option @if(data.Target == "_self"){<text>selected</text>} value="_self">Тоже окно</option>
+                      <option  @if(data.Target == "_blank"){<text>selected</text>} value="_blank">Новое окно</option>
                   </select>
                 </td>
             </tr>
@@ -127,71 +111,19 @@ var hashcode = Request.GetHashCode();
                     <label for="linkorder">Номер пункта меню:</label>
                 </td>
                 <td>
-                    <input type="number" maxlength="3" class="input" id="linkorder" name="linkorder" value="@linkorder"/>
+                    <input type="number" maxlength="3" class="input" id="linkorder" name="linkorder" value="@data.OrderId"/>
                 </td>
             </tr>
         <tr>
                 <td class="table-label">
-                    <input type="submit" class="btn" value="Добавить"/>
+                    <input type="submit" class="btn" value="Сохранить"/>
                 </td>
                 
             </tr>
         </tbody>
     </table>
-
-
-
-   @* <ol>
-        <li>
-            <label for="linklabel">Название пункта меню*:</label>
-            <input type="text" name="linklabel" value="@linklabel"/>
-            @if(linklabelvalid){
-                <text>
-                    <span class="form-error">
-                        Текст ссылки не может быть пустым
-                    </span>
-                </text>
-            }
-        </li>
-        <li >
-                <label for="pagelink">Select Page:</label>
-                 <select name="pagelink">
-                 @foreach (var row in pages)
-                 {
-                      <option value="@row.Name">@row.Name</option>
-                 }
-                    
-                 </select>
-             </li>
-             <li >
-                <label for="pagelink">Адрес ссылки*:</label>
-                <input type="text" name="pagelink" value="@pagelink" maxlength="250" />
-                 
-                 @if(pagelinkvalid){
-                <text>
-                    <span class="form-error">
-                        Ссылка должна куда-то вести
-                    </span>
-                </text>
-            }
-             </li>
-        <li >
-                <label for="Target">Target:</label>
-                  <select name="Target">
-                      <option value="_self">Same window</option>
-                      <option value="_blank">New window</option>
-                  </select>
-             </li>
-        <li>
-            <label for="linkorder">Номер пункта меню:</label>
-            <input type="number" name="linkorder" value="@linkorder"/>
-           
-        </li>
-        <li>
-            <input type="submit" class="btn" value="Добавить"/>
-        </li>
-    </ol>*@
 </form>
+
 
 <h2 id="avalible">Доступные пункты меню</h2>
 @grid.GetHtml(tableStyle: "Grid",
