--- a/Components/Layouts/_lMaster.cshtml
+++ b/Components/Layouts/_lMaster.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+@{
     var db = Database.Open("Datebase");
 
 
@@ -43,7 +43,9 @@
 
        @Html.Raw(dstatcode.SetValue)
         @if(dstat.SetValue == "on"){
-        <script>(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter206275 = new Ya.Metrika({id:206275, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true, trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/206275" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+@*        <script>(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter206275 = new Ya.Metrika({id:206275, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true, trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/206275" style="position:absolute; left:-9999px;" alt="" /></div></noscript>*@
+<script>new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"" : ";s"+screen.width+"*"+screen.height+"*" + (screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u"+escape(document.URL) + ";h"+escape(document.title.substring(0,80)) + ";" +Math.random();</script>
 }
     </body>
 </html>
+<!-- 2008-@DateTime.Now.Year World Fly -->
